MBm fix